--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 
 server.port=8080
+
+jwt.token.secret=$2a$10$H1blzaO3FN3PjTpzRJkVh.YZLYmpN.acqFJdmMXGEsNksQ7ijIoFi
+jwt.token.expired=1800000
