--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,10 @@ server.port=8080
 
 jwt.token.secret=$2a$10$H1blzaO3FN3PjTpzRJkVh.YZLYmpN.acqFJdmMXGEsNksQ7ijIoFi
 jwt.token.expired=1800000
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=<your email>
+spring.mail.password=<your password>
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
